--- a/project_task_default_stage/i18n/cs_CZ.po
+++ b/project_task_default_stage/i18n/cs_CZ.po
@@ -3,25 +3,26 @@
 # * project_task_default_stage
 #
 # Translators:
-# OCA Transbot <transbot@odoo-community.org>, 2016
+# Lukáš Spurný <lukasspurny8@gmail.com>, 2018
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 10.0\n"
+"Project-Id-Version: Odoo Server 11.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-08-10 02:49+0000\n"
-"PO-Revision-Date: 2017-08-10 02:49+0000\n"
-"Last-Translator: OCA Transbot <transbot@odoo-community.org>, 2016\n"
-"Language-Team: Portuguese (https://www.transifex.com/oca/teams/23907/pt/)\n"
-"Language: pt\n"
+"POT-Creation-Date: 2018-02-21 03:42+0000\n"
+"PO-Revision-Date: 2018-02-21 03:42+0000\n"
+"Last-Translator: Lukáš Spurný <lukasspurny8@gmail.com>, 2018\n"
+"Language-Team: Czech (Czech Republic) (https://www.transifex.com/oca/"
+"teams/23907/cs_CZ/)\n"
+"Language: cs_CZ\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
 #. module: project_task_default_stage
 #: model:project.task.type,name:project_task_default_stage.project_tt_analysis
 msgid "Analysis"
-msgstr ""
+msgstr "Analýza"
 
 #. module: project_task_default_stage
 #: model:project.task.type,legend_blocked:project_task_default_stage.project_tt_analysis
@@ -33,32 +34,32 @@ msgstr ""
 #: model:project.task.type,legend_blocked:project_task_default_stage.project_tt_specification
 #: model:project.task.type,legend_blocked:project_task_default_stage.project_tt_testing
 msgid "Blocked"
-msgstr ""
+msgstr "Blokováno"
 
 #. module: project_task_default_stage
 #: model:project.task.type,name:project_task_default_stage.project_tt_cancel
 msgid "Cancelled"
-msgstr ""
+msgstr "Zrušeno"
 
 #. module: project_task_default_stage
 #: model:ir.model.fields,field_description:project_task_default_stage.field_project_task_type_case_default
 msgid "Default for New Projects"
-msgstr ""
+msgstr "Výchozí nastavení pro nové projekty"
 
 #. module: project_task_default_stage
 #: model:project.task.type,name:project_task_default_stage.project_tt_design
 msgid "Design"
-msgstr ""
+msgstr "Náčrt"
 
 #. module: project_task_default_stage
 #: model:project.task.type,name:project_task_default_stage.project_tt_development
 msgid "Development"
-msgstr ""
+msgstr "Rozvoj"
 
 #. module: project_task_default_stage
 #: model:project.task.type,name:project_task_default_stage.project_tt_deployment
 msgid "Done"
-msgstr "Concluído"
+msgstr "Hotovo"
 
 #. module: project_task_default_stage
 #: model:ir.model.fields,help:project_task_default_stage.field_project_task_type_case_default
@@ -66,6 +67,8 @@ msgid ""
 "If you check this field, this stage will be proposed by default on each new "
 "project. It will not assign this stage to existing projects."
 msgstr ""
+"Pokud zaškrtnete toto pole, bude tato fáze automaticky navržena pro každý "
+"nový projekt. Tato fáze nepřiděluje stávajícím projektům."
 
 #. module: project_task_default_stage
 #: model:project.task.type,legend_normal:project_task_default_stage.project_tt_analysis
@@ -77,22 +80,22 @@ msgstr ""
 #: model:project.task.type,legend_normal:project_task_default_stage.project_tt_specification
 #: model:project.task.type,legend_normal:project_task_default_stage.project_tt_testing
 msgid "In Progress"
-msgstr ""
+msgstr "Pokrok"
 
 #. module: project_task_default_stage
 #: model:project.task.type,name:project_task_default_stage.project_tt_merge
 msgid "Merge"
-msgstr ""
+msgstr "Jít"
 
 #. module: project_task_default_stage
 #: model:ir.model,name:project_task_default_stage.model_project_project
 msgid "Project"
-msgstr "Projeto"
+msgstr "Projekt"
 
 #. module: project_task_default_stage
 #: model:ir.ui.view,arch_db:project_task_default_stage.edit_project
 msgid "Project Stages"
-msgstr ""
+msgstr "Projektové fáze"
 
 #. module: project_task_default_stage
 #: model:project.task.type,legend_done:project_task_default_stage.project_tt_analysis
@@ -104,19 +107,19 @@ msgstr ""
 #: model:project.task.type,legend_done:project_task_default_stage.project_tt_specification
 #: model:project.task.type,legend_done:project_task_default_stage.project_tt_testing
 msgid "Ready for Next Stage"
-msgstr ""
+msgstr "Připraveno pro další fázi"
 
 #. module: project_task_default_stage
 #: model:project.task.type,name:project_task_default_stage.project_tt_specification
 msgid "Specification"
-msgstr ""
+msgstr "Specifikace"
 
 #. module: project_task_default_stage
 #: model:ir.model,name:project_task_default_stage.model_project_task_type
 msgid "Task Stage"
-msgstr "Etapa Tarefa"
+msgstr "Úkolová fáze"
 
 #. module: project_task_default_stage
 #: model:project.task.type,name:project_task_default_stage.project_tt_testing
 msgid "Testing"
-msgstr ""
+msgstr "Testování"
