--- a/project_task_default_stage/i18n/es_CO.po
+++ b/project_task_default_stage/i18n/es_CO.po
@@ -3,16 +3,18 @@
 # * project_task_default_stage
 #
 # Translators:
-# OCA Transbot <transbot@odoo-community.org>, 2016
+# JOSE ALEJANDRO ECHEVERRI VALENCIA <josealejandroeche@gmail.com>, 2018
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 10.0\n"
+"Project-Id-Version: Odoo Server 11.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-08-10 02:49+0000\n"
-"PO-Revision-Date: 2017-08-10 02:49+0000\n"
-"Last-Translator: OCA Transbot <transbot@odoo-community.org>, 2016\n"
-"Language-Team: Portuguese (https://www.transifex.com/oca/teams/23907/pt/)\n"
-"Language: pt\n"
+"POT-Creation-Date: 2018-02-21 03:42+0000\n"
+"PO-Revision-Date: 2018-02-21 03:42+0000\n"
+"Last-Translator: JOSE ALEJANDRO ECHEVERRI VALENCIA <josealejandroeche@gmail."
+"com>, 2018\n"
+"Language-Team: Spanish (Colombia) (https://www.transifex.com/oca/teams/23907/"
+"es_CO/)\n"
+"Language: es_CO\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
@@ -58,7 +60,7 @@ msgstr ""
 #. module: project_task_default_stage
 #: model:project.task.type,name:project_task_default_stage.project_tt_deployment
 msgid "Done"
-msgstr "Concluído"
+msgstr ""
 
 #. module: project_task_default_stage
 #: model:ir.model.fields,help:project_task_default_stage.field_project_task_type_case_default
@@ -87,7 +89,7 @@ msgstr ""
 #. module: project_task_default_stage
 #: model:ir.model,name:project_task_default_stage.model_project_project
 msgid "Project"
-msgstr "Projeto"
+msgstr "Proyecto"
 
 #. module: project_task_default_stage
 #: model:ir.ui.view,arch_db:project_task_default_stage.edit_project
@@ -114,7 +116,7 @@ msgstr ""
 #. module: project_task_default_stage
 #: model:ir.model,name:project_task_default_stage.model_project_task_type
 msgid "Task Stage"
-msgstr "Etapa Tarefa"
+msgstr ""
 
 #. module: project_task_default_stage
 #: model:project.task.type,name:project_task_default_stage.project_tt_testing
