--- a/project_parent/i18n/project_parent.pot
+++ b/project_parent/i18n/project_parent.pot
@@ -1,12 +1,12 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#	* project_parent
+# 	* project_parent
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 10.0\n"
+"Project-Id-Version: Odoo Server 13.0\n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: <>\n"
+"Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -14,28 +14,31 @@ msgstr ""
 "Plural-Forms: \n"
 
 #. module: project_parent
-#: model:ir.model,name:project_parent.model_account_analytic_account
-msgid "Analytic Account"
+#: model:ir.model.fields,field_description:project_parent.field_project_project__child_ids_count
+msgid "Child Ids Count"
 msgstr ""
 
 #. module: project_parent
-#: model:ir.ui.view,arch_db:project_parent.view_project_parent_edit_project
+#: model_terms:ir.ui.view,arch_db:project_parent.edit_project
 msgid "Child Projects"
 msgstr ""
 
 #. module: project_parent
-#: model:ir.ui.view,arch_db:project_parent.view_project_parent_project_filter
-msgid "Parent"
+#: model:ir.model.fields,field_description:project_parent.field_project_project__parent_path
+msgid "Parent Path"
 msgstr ""
 
 #. module: project_parent
-#: model:ir.model.fields,field_description:project_parent.field_account_analytic_account_parent_project_id
-#: model:ir.model.fields,field_description:project_parent.field_project_project_parent_project_id
+#: model:ir.model.fields,field_description:project_parent.field_project_project__parent_id
 msgid "Parent Project"
 msgstr ""
 
 #. module: project_parent
 #: model:ir.model,name:project_parent.model_project_project
-msgid "WBS element"
+msgid "Project"
 msgstr ""
 
+#. module: project_parent
+#: model:ir.model.fields,field_description:project_parent.field_project_project__child_ids
+msgid "Sub-projects"
+msgstr ""
