--- a/project_timeline/i18n/es_AR.po
+++ b/project_timeline/i18n/es_AR.po
@@ -1,50 +1,47 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-# * project_timeline
+# 	* project_timeline
 #
-# Translators:
-# Peter Hageman <hageman.p@gmail.com>, 2017
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 10.0\n"
+"Project-Id-Version: Odoo Server 14.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-07-06 02:46+0000\n"
-"PO-Revision-Date: 2017-07-06 02:46+0000\n"
-"Last-Translator: Peter Hageman <hageman.p@gmail.com>, 2017\n"
-"Language-Team: Dutch (Netherlands) (https://www.transifex.com/oca/"
-"teams/23907/nl_NL/)\n"
-"Language: nl_NL\n"
+"PO-Revision-Date: 2022-01-17 17:39+0000\n"
+"Last-Translator: Ignacio Buioli <ibuioli@gmail.com>\n"
+"Language-Team: none\n"
+"Language: es_AR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 4.3.2\n"
 
 #. module: project_timeline
 #: model:ir.model.fields,field_description:project_timeline.field_project_task__display_name
 msgid "Display Name"
-msgstr ""
+msgstr "Mostrar Nombre"
 
 #. module: project_timeline
 #: model:ir.model.fields,field_description:project_timeline.field_project_task__id
 msgid "ID"
-msgstr ""
+msgstr "ID"
 
 #. module: project_timeline
 #: model:ir.model.fields,field_description:project_timeline.field_project_task____last_update
 msgid "Last Modified on"
-msgstr ""
+msgstr "Última modificación en"
 
 #. module: project_timeline
 #: model:ir.model.fields,field_description:project_timeline.field_project_task__date_start
 msgid "Starting Date"
-msgstr ""
+msgstr "Fecha de Inicio"
 
 #. module: project_timeline
 #: model:ir.model,name:project_timeline.model_project_task
 msgid "Task"
-msgstr "Taak"
+msgstr "Tarea"
 
 #. module: project_timeline
 #: model_terms:ir.ui.view,arch_db:project_timeline.project_task_timeline
 msgid "User"
-msgstr ""
+msgstr "Usuario"
