--- a/project_role/i18n/project_role.pot
+++ b/project_role/i18n/project_role.pot
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 14.0\n"
+"Project-Id-Version: Odoo Server 15.0\n"
 "Report-Msgid-Bugs-To: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -14,27 +14,27 @@ msgstr ""
 "Plural-Forms: \n"
 
 #. module: project_role
+#: code:addons/project_role/models/project_assignment.py:0
+#, python-format
+msgid "%(USER)s as %(ROLE)s"
+msgstr ""
+
+#. module: project_role
+#: code:addons/project_role/models/project_assignment.py:0
+#, python-format
+msgid "%(USER)s as %(ROLE)s in %(PROJECT)s"
+msgstr ""
+
+#. module: project_role
+#: code:addons/project_role/models/project_assignment.py:0
+#, python-format
+msgid "%(USER)s as %(ROLE)s on %(PROJECT)s"
+msgstr ""
+
+#. module: project_role
 #: code:addons/project_role/models/project_role.py:0
 #, python-format
 msgid "%(parent)s / %(own)s"
-msgstr ""
-
-#. module: project_role
-#: code:addons/project_role/models/project_assignment.py:0
-#, python-format
-msgid "%s as %s"
-msgstr ""
-
-#. module: project_role
-#: code:addons/project_role/models/project_assignment.py:0
-#, python-format
-msgid "%s as %s in %s"
-msgstr ""
-
-#. module: project_role
-#: code:addons/project_role/models/project_assignment.py:0
-#, python-format
-msgid "%s as %s on %s"
 msgstr ""
 
 #. module: project_role
@@ -74,7 +74,9 @@ msgstr ""
 #. module: project_role
 #: code:addons/project_role/models/project_assignment.py:0
 #, python-format
-msgid "Assignment %s conflicts with another assignment: %s"
+msgid ""
+"Assignment %(ASSIGNMENT)s conflicts with another assignment: "
+"%(OTHER_ASSIGNMENT)s"
 msgstr ""
 
 #. module: project_role
@@ -155,21 +157,13 @@ msgstr ""
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__display_name
-#: model:ir.model.fields,field_description:project_role.field_project_project__display_name
 #: model:ir.model.fields,field_description:project_role.field_project_role__display_name
-#: model:ir.model.fields,field_description:project_role.field_res_company__display_name
-#: model:ir.model.fields,field_description:project_role.field_res_config_settings__display_name
 msgid "Display Name"
 msgstr ""
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__message_follower_ids
 msgid "Followers"
-msgstr ""
-
-#. module: project_role
-#: model:ir.model.fields,field_description:project_role.field_project_assignment__message_channel_ids
-msgid "Followers (Channels)"
 msgstr ""
 
 #. module: project_role
@@ -183,11 +177,13 @@ msgid "Group By"
 msgstr ""
 
 #. module: project_role
+#: model:ir.model.fields,field_description:project_role.field_project_assignment__has_message
+msgid "Has Message"
+msgstr ""
+
+#. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__id
-#: model:ir.model.fields,field_description:project_role.field_project_project__id
 #: model:ir.model.fields,field_description:project_role.field_project_role__id
-#: model:ir.model.fields,field_description:project_role.field_res_company__id
-#: model:ir.model.fields,field_description:project_role.field_res_config_settings__id
 msgid "ID"
 msgstr ""
 
@@ -205,7 +201,7 @@ msgstr ""
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_project__inherit_assignments
-msgid "Inherit assignments"
+msgid "Inherit Assignments"
 msgstr ""
 
 #. module: project_role
@@ -215,10 +211,7 @@ msgstr ""
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment____last_update
-#: model:ir.model.fields,field_description:project_role.field_project_project____last_update
 #: model:ir.model.fields,field_description:project_role.field_project_role____last_update
-#: model:ir.model.fields,field_description:project_role.field_res_company____last_update
-#: model:ir.model.fields,field_description:project_role.field_res_config_settings____last_update
 msgid "Last Modified on"
 msgstr ""
 
@@ -243,7 +236,7 @@ msgstr ""
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_project__limit_role_to_assignments
-msgid "Limit role to assignments"
+msgid "Limit Role To Assignments"
 msgstr ""
 
 #. module: project_role
@@ -409,13 +402,13 @@ msgstr ""
 #. module: project_role
 #: code:addons/project_role/models/project_assignment.py:0
 #, python-format
-msgid "User %s can not be assigned to role %s on %s."
+msgid "User %(USER)s can not be assigned to role %(ROLE)s on %(PROJECT)s."
 msgstr ""
 
 #. module: project_role
 #: code:addons/project_role/models/project_assignment.py:0
 #, python-format
-msgid "User %s can not be assigned to role %s."
+msgid "User %(USER)s can not be assigned to role %(ROLE)s."
 msgstr ""
 
 #. module: project_role
