--- a/project_timeline/i18n/project_timeline.pot
+++ b/project_timeline/i18n/project_timeline.pot
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 14.0\n"
+"Project-Id-Version: Odoo Server 15.0\n"
 "Report-Msgid-Bugs-To: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -14,23 +14,8 @@ msgstr ""
 "Plural-Forms: \n"
 
 #. module: project_timeline
-#: model:ir.model.fields,field_description:project_timeline.field_project_task__display_name
-msgid "Display Name"
-msgstr ""
-
-#. module: project_timeline
-#: model:ir.model.fields,field_description:project_timeline.field_project_task__id
-msgid "ID"
-msgstr ""
-
-#. module: project_timeline
-#: model:ir.model.fields,field_description:project_timeline.field_project_task____last_update
-msgid "Last Modified on"
-msgstr ""
-
-#. module: project_timeline
 #: model:ir.model.fields,field_description:project_timeline.field_project_task__date_start
-msgid "Starting Date"
+msgid "Start Date"
 msgstr ""
 
 #. module: project_timeline
