--- a/project_key/i18n/it.po
+++ b/project_key/i18n/it.po
@@ -6,45 +6,48 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 14.0\n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: \n"
-"Language-Team: \n"
+"PO-Revision-Date: 2022-10-19 14:43+0000\n"
+"Last-Translator: Sergio Zanchetta <primes2h@gmail.com>\n"
+"Language-Team: none\n"
+"Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 4.14.1\n"
 
 #. module: project_key
 #: model:ir.model.fields,field_description:project_key.field_project_project__display_name
 #: model:ir.model.fields,field_description:project_key.field_project_task__display_name
 msgid "Display Name"
-msgstr ""
+msgstr "Nome visualizzato"
 
 #. module: project_key
 #: model:ir.model.fields,field_description:project_key.field_project_project__id
 #: model:ir.model.fields,field_description:project_key.field_project_task__id
 msgid "ID"
-msgstr ""
+msgstr "ID"
 
 #. module: project_key
 #: model:ir.model.fields,field_description:project_key.field_project_project__key
 msgid "Key"
-msgstr ""
+msgstr "Chiave"
 
 #. module: project_key
 #: model:ir.model.fields,field_description:project_key.field_project_project__task_key_sequence_id
 msgid "Key Sequence"
-msgstr ""
+msgstr "Sequenza chiave"
 
 #. module: project_key
 #: model:ir.model.fields,field_description:project_key.field_project_project____last_update
 #: model:ir.model.fields,field_description:project_key.field_project_task____last_update
 msgid "Last Modified on"
-msgstr ""
+msgstr "Ultima modifica il"
 
 #. module: project_key
 #: model:ir.model.constraint,message:project_key.constraint_project_project_project_key_unique
 msgid "Project key must be unique"
-msgstr ""
+msgstr "La chiave del progetto deve essere univoca"
 
 #. module: project_key
 #: code:addons/project_key/models/project_project.py:0
@@ -55,7 +58,7 @@ msgstr ""
 #. module: project_key
 #: model:ir.model,name:project_key.model_project_task
 msgid "Task"
-msgstr ""
+msgstr "Lavoro"
 
 #. module: project_key
 #: model:ir.model.constraint,message:project_key.constraint_project_task_task_key_unique
@@ -65,7 +68,7 @@ msgstr ""
 #. module: project_key
 #: model:ir.model.fields,field_description:project_key.field_project_task__url
 msgid "URL"
-msgstr ""
+msgstr "URL"
 
 #. module: project_key
 #: model:ir.model,name:project_key.model_project_project
@@ -75,4 +78,7 @@ msgstr ""
 #. module: project_key
 #: model:ir.model.fields,field_description:project_key.field_project_task__key
 msgid "key"
-msgstr ""
+msgstr "chiave"
+
+#~ msgid "Project"
+#~ msgstr "Progetto"
