--- a/project_task_default_stage/i18n/zh_CN.po
+++ b/project_task_default_stage/i18n/zh_CN.po
@@ -104,7 +104,7 @@ msgstr "项目阶段"
 #: model:project.task.type,legend_done:project_task_default_stage.project_tt_merge
 #: model:project.task.type,legend_done:project_task_default_stage.project_tt_specification
 #: model:project.task.type,legend_done:project_task_default_stage.project_tt_testing
-msgid "Ready for Next Stage"
+msgid "Ready"
 msgstr ""
 
 #. module: project_task_default_stage
