--- a/project_task_stock/i18n/project_stock.pot
+++ b/project_task_stock/i18n/project_stock.pot
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 14.0\n"
+"Project-Id-Version: Odoo Server 15.0\n"
 "Report-Msgid-Bugs-To: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -96,17 +96,6 @@ msgid "Destination Location"
 msgstr ""
 
 #. module: project_stock
-#: model:ir.model.fields,field_description:project_stock.field_account_analytic_line__display_name
-#: model:ir.model.fields,field_description:project_stock.field_project_project__display_name
-#: model:ir.model.fields,field_description:project_stock.field_project_task__display_name
-#: model:ir.model.fields,field_description:project_stock.field_project_task_type__display_name
-#: model:ir.model.fields,field_description:project_stock.field_stock_move__display_name
-#: model:ir.model.fields,field_description:project_stock.field_stock_move_line__display_name
-#: model:ir.model.fields,field_description:project_stock.field_stock_scrap__display_name
-msgid "Display Name"
-msgstr ""
-
-#. module: project_stock
 #: model:ir.model.fields.selection,name:project_stock.selection__project_task__stock_state__done
 msgid "Done"
 msgstr ""
@@ -120,17 +109,6 @@ msgstr ""
 #. module: project_stock
 #: model:ir.model.fields,field_description:project_stock.field_project_task__group_id
 msgid "Group"
-msgstr ""
-
-#. module: project_stock
-#: model:ir.model.fields,field_description:project_stock.field_account_analytic_line__id
-#: model:ir.model.fields,field_description:project_stock.field_project_project__id
-#: model:ir.model.fields,field_description:project_stock.field_project_task__id
-#: model:ir.model.fields,field_description:project_stock.field_project_task_type__id
-#: model:ir.model.fields,field_description:project_stock.field_stock_move__id
-#: model:ir.model.fields,field_description:project_stock.field_stock_move_line__id
-#: model:ir.model.fields,field_description:project_stock.field_stock_scrap__id
-msgid "ID"
 msgstr ""
 
 #. module: project_stock
@@ -158,17 +136,6 @@ msgstr ""
 #: code:addons/project_stock/models/project_task.py:0
 #, python-format
 msgid "It is not possible to change this with reserved movements in tasks."
-msgstr ""
-
-#. module: project_stock
-#: model:ir.model.fields,field_description:project_stock.field_account_analytic_line____last_update
-#: model:ir.model.fields,field_description:project_stock.field_project_project____last_update
-#: model:ir.model.fields,field_description:project_stock.field_project_task____last_update
-#: model:ir.model.fields,field_description:project_stock.field_project_task_type____last_update
-#: model:ir.model.fields,field_description:project_stock.field_stock_move____last_update
-#: model:ir.model.fields,field_description:project_stock.field_stock_move_line____last_update
-#: model:ir.model.fields,field_description:project_stock.field_stock_scrap____last_update
-msgid "Last Modified on"
 msgstr ""
 
 #. module: project_stock
@@ -302,6 +269,17 @@ msgstr ""
 #. module: project_stock
 #: model:ir.model.fields,field_description:project_stock.field_stock_move__raw_material_task_id
 msgid "Task for material"
+msgstr ""
+
+#. module: project_stock
+#: model:project.project,name:project_stock.project_project_tm_test
+#: model:stock.picking.type,name:project_stock.stock_picking_type_tm_test
+msgid "Task material"
+msgstr ""
+
+#. module: project_stock
+#: model:project.project,label_tasks:project_stock.project_project_tm_test
+msgid "Tasks"
 msgstr ""
 
 #. module: project_stock
